--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Simple and lightweight Boilerplate for ReactJS projects",
   "scripts": {
     "lint": "eslint src",
-    "start": "node server.js"
+    "start": "nodemon -L server.js"
   },
   "repository": {
     "type": "git",
@@ -37,7 +37,7 @@
     "css-loader": "0.23.1",
     "eslint": "2.7.0",
     "eslint-plugin-react": "5.2.2",
-    "node-sass": "3.8.0",
+    "node-sass": "^3.8.0",
     "sass-loader": "4.0.0",
     "sockjs-client": "^1.1.1",
     "style-loader": "0.13.1",
