--- a/chatty_server/package.json
+++ b/chatty_server/package.json
@@ -12,6 +12,7 @@
     "bufferutil": "^3.0.0",
     "express": "^4.15.2",
     "node-uuid": "^1.4.7",
+    "random-color": "^1.0.1",
     "utf-8-validate": "^3.0.1",
     "ws": "^2.2.0"
   }
